// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SurveyMenu component should match the IndexMenu 1`] = `
<MenuList
  identifier="survey"
  items={
    Array [
      Object {
        "id": "foo",
        "parentId": "root",
      },
      Object {
        "id": "bar",
        "parentId": "root",
      },
    ]
  }
  kind="index"
  onMenuItemClick={undefined}
/>
`;

exports[`SurveyMenu component should match the TableMenu 1`] = `
<MenuList
  identifier="survey"
  items={
    Array [
      Object {
        "id": "foo",
        "parentId": "root",
      },
      Object {
        "id": "bar",
        "parentId": "root",
      },
    ]
  }
  kind={undefined}
  onMenuItemClick={undefined}
/>
`;
